# talent-plan

courses/rust/projects/kvs/: Cargo.toml
courses/rust/projects/kvs/src/: lib.rs
courses/rust/projects/kvs_3/: Cargo.toml
courses/rust/projects/kvs_3/src/: lib.rs
