[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "3.2.14"
failure = "0.1.8"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
stderrlog = "0.5.4"
